--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "grunt build"
   },
   "engines": {
-      "node": ">=0.10.x",
-      "npm": ">=1.2.x"
+    "node": ">=0.10.x",
+    "npm": ">=1.2.x"
   },
   "repository": {
     "type": "git",
@@ -45,6 +45,7 @@
     "lodash": "~2.4.1",
     "grunt-contrib-sass": "~0.7.2",
     "grunt-cli": "~0.1.13",
-    "karma": "~0.10.9"
+    "karma": "~0.10.9",
+    "grunt-conventional-changelog": "~1.1.0"
   }
 }
