--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "url": "https://github.com/sofa/sofa-storages/issues"
   },
   "dependencies": {
-    "sofa-core": "~0.1.3"
+    "sofa-core": "~0.1.x"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
