--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.1",
   "description": "Sofa Web SDK storage component.",
   "main": "dist/sofa.storages.js",
+  "homepage": "http://www.sofa.io",
   "scripts": {
     "test": "grunt build"
   },
