--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "grunt-conventional-changelog": "~1.1.0",
     "karma-jasmine": "~0.1.5",
     "karma-chrome-launcher": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3"
+    "karma-firefox-launcher": "~0.1.3",
+    "grunt-deploy-semver": "^0.3.0"
   }
 }
